# mjpeg-http-streamer

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: build-and-release.yaml  publish-release.yaml
mjpeg_http_streamer/: arguments.py  mjpeg_frame_reader.py  stream_provider.py
src/mjpeg_http_streamer/: __main__.py  app.py  arguments.py  frame_broker.py  mjpeg_frame_reader.py  source.py  stream_provider.py
