[metadata]
name = mjpeg_http_streamer
version = 0.0.2
author = Andre Kupka
author_email = me-github@andrekupka.de
description = A tool to create a http mjpeg stream from a plain mjpeg stream.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrekupka/mjpeg-http-streamer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
